# multistate_nn

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  ChangesNeeded.md  GITHUB_COMMIT_GUIDE.md  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  README.rst  README_CENSORING.md  README_CIF_METHODOLOGY.md  README_TIME_ADJUSTMENT.md  README_UPDATE.md  multistate_nn_MPR.md  package_development.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  python-package.yml
data/: README.md  aidssi.csv  bladder.csv  cav.csv  pbc.csv
docs/source/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: architectures.rst  extensions.rst  index.rst  losses.rst  models.rst  train.rst
docs/source/api/utils/: analysis.rst  continuous_simulation.rst  example_utils.rst  visualization.rst
examples/: CIF_RECOMMENDATIONS.md  aidssi_real_data_example.ipynb  bladder_cancer_bayesian_example.ipynb  cif_discretization_comparison.ipynb  cif_discretization_test.py  continuous_time_example.py  disease_progression_example.ipynb  pbc_advanced_architectures.ipynb  pbc_analysis_example.ipynb  pbc_analysis_fixed.ipynb  pbc_fixed_stage_to_state.py  simple_bayesian_example.py  simulate_and_validate.py  simulation_and_validation.ipynb  survival_analysis_with_censoring.ipynb  time_adjusted_cif_comparison.py
multistate_nn/: __init__.py  architectures.py  losses.py  models.py  models_continuous.py  patches.py  train.py  utils.py
multistate_nn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
multistate_nn/extensions/: __init__.py  bayesian.py  bayesian_continuous.py
multistate_nn/utils/: __init__.py  aalen_johansen.py  analysis.py  cif.py  continuous_simulation.py  example_utils.py  simulation.py  time_mapping.py  visualization.py
scripts/: download_data.py  setup_data.sh
tests/: README.md  test_analysis.py  test_architectures.py  test_bayesian_continuous.py  test_censoring.py  test_cif_calculation.py  test_cif_discretization.py  test_cif_properties.py  test_continuous_losses.py  test_continuous_models.py  test_continuous_simulation.py  test_imports.py  test_minimal_cif_example.py  test_model_architecture.py  test_model_persistence.py  test_model_summary_visualization.py  test_model_type_param.py  test_multistate_nn.py  test_new_features.py  test_simulation.py  test_time_adjustment.py  test_time_mapping.py  test_visualization.py
