[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multistate_nn"
version = "0.4.0"  # Updated version for continuous-time only
authors = [{name = "Deniz Akdemir, github: denizakdemir", email = "denizakdemir@gmail.com"}]
description = "Continuous-time multistate models with neural networks and Neural ODEs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.0",
    "torchdiffeq>=0.2.0",
]

[project.optional-dependencies]
bayesian = ["pyro-ppl>=1.9.0"]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "scikit-learn>=1.0.0",
]
examples = [
    "scikit-learn>=1.0.0",
]

[tool.setuptools]
packages = ["multistate_nn"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "pyro.*",
    "tqdm.*",
    "matplotlib.*",
    "seaborn.*",
    "networkx.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=multistate_nn --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]