[metadata]
name = multistate-nn
version = attr: multistate_nn.__version__
author = Deniz Akdemir, github: denizakdemir
author_email = denizakdemir@gmail.com
description = Continuous-time multistate models with neural networks and Neural ODEs
long_description = file: README.md, README.rst
long_description_content_type = text/markdown
url = https://github.com/denizakdemir/multistate_nn
project_urls =
    Bug Tracker = https://github.com/denizakdemir/multistate_nn/issues
    Documentation = https://denizakdemir.github.io/multistate_nn/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    examples*